--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ APP_SECRET=37b7546ab1945612a22bf91c2f3d6f95
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/reactsym?serverVersion=5.7&charset=utf8mb4"
-#DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/reactsym?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="postgresql://postgres:FloFlo852@127.0.0.1:5432/WORSHOP3eme?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
