--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Symfony\\": "vendor/symfony/symfony/src/"
         }
     },
     "autoload-dev": {
