--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "react-content-loader": "^6.2.0",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
-        "react-toastify": "^9.0.1",
-        "sass": "^1.68.0"
+        "react-toastify": "^9.0.1"
     }
 }
