--- a/package.json
+++ b/package.json
@@ -18,13 +18,21 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.12",
+        "@mui/styled-engine-sc": "^5.14.12",
+        "@mui/x-date-pickers": "^6.16.0",
         "axios": "^1.5.1",
+        "date-fns": "^2.30.0",
+        "dayjs": "^1.11.10",
         "jwt-decode": "^3.1.2",
         "moment": "^2.29.3",
         "react": "^16.8.6",
         "react-content-loader": "^6.2.0",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
-        "react-toastify": "^9.0.1"
+        "react-toastify": "^9.0.1",
+        "styled-components": "^6.0.8"
     }
 }
